# turboguard-predictive-maintenance

./: .env.example  .gitignore  LICENSE  README.es.md  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 00_eda_cmapss.ipynb  01_features.ipynb  02_baselines_xgb_lgbm.ipynb  03_lstm_rul.ipynb  04_survival_weibull_cox.ipynb  05_anomaly.ipynb
scripts/: download_data.sh
src/turboguard/: __init__.py
src/turboguard/data/: __init__.py  cmapss.py
src/turboguard/features/: __init__.py  changepoint.py  pipeline.py  rolling.py  spectral.py
src/turboguard/models/: __init__.py
src/turboguard/models/anomaly/: __init__.py  autoencoder.py  isolation_forest.py
src/turboguard/models/rul/: __init__.py  baselines.py  lstm.py  nasa_score.py  splits.py
src/turboguard/models/survival/: __init__.py  engine_features.py  weibull_cox.py
tests/: test_anomaly.py  test_baselines.py  test_cmapss_loader.py  test_features.py  test_lstm.py  test_nasa_score.py  test_rolling.py  test_survival.py
